# tank-camera

./: Cargo.toml  README.md  frontend.dockerfile  signaling.dockerfile
camera-service/: Cargo.toml
camera-service/src/: camera.rs  connection.rs  encoding.rs  main.rs  signaling.rs
frontend/: Cargo.toml  Dockerfile  index.html
frontend/src/: common.rs  ice.rs  lib.rs  sdp.rs  ui.rs  websockets.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
signaling-server/: Cargo.toml  Dockerfile  Makefile.toml
signaling-server/src/: handler.rs  main.rs  state.rs
