[package]
name = "camera-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.56"
chrono="*"
bytes = "*"
rav1e = "0.7.1"
serde = { version = "1.0.136", features = ["derive"] }
base64 = "0.13.0"
serde_json = "1.0"
image = "0.25.2"
wasm-bindgen="0.2.89"
env_logger = "0.10.0"
simplelog = "0.8.0"
log = "0.4.8"
tokio = { version = "1.17.0", features = ["full"] }
warp = "0.3"
bus = "2.2.3"
ahash = "0.8.4"
mozjpeg="0.10.10"
nokhwa = { version = "0.10.4", features = ["input-native", "output-threaded"], git = "https://github.com/kendfrey/nokhwa.git", branch = "0.10" }

webrtc = { version = "0.11"}
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
futures-channel = "0.3.28"
tokio-tungstenite = "*"

protocol = {path = "../protocol"}
