[package]
name = "signaling-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name="signaling-server"
path="./src/main.rs"


[dependencies]
anyhow = "1.0.56"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
futures-channel = "0.3.28"
tokio-tungstenite = "*"
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.62"
simplelog = "0.8.0"
log = "0.4.8"
futures="0.3.12"
async-std="1.9.0"
rand="0.8.3"
once_cell="*"
scc = "2.1.17"


# From Workspace
protocol = {path = "../protocol"}
